# game-of-life

./: CMakeLists.txt  LICENSE  README.md
src/: cell.cpp  game_rules.cpp  input.cpp  main.cpp  output.cpp
src/game_io/: game_io.hpp  input.cpp  output.cpp
src/graphics/: graphics.cpp  graphics.hpp
src/models/: cell.cpp  cell.hpp  game_io.hpp  game_ruler.cpp  game_ruler.hpp  game_rules.hpp
